Adds backedn deployment

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -16,7 +16,7 @@
 
   - name: Unarchive files
     unarchive:
-      src: "~/project/.circleci/ansible/roles/deploy/files/archive.tar.gz"
+      src: "files/artifact.tar.gz"
       dest: ~/web
 
   - name: "Start application"
