--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -409,7 +409,7 @@ jobs:
              # Zip the directory
              tar -C backend -czvf artifact.tar.gz .
              mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
-             cp -r artifact.tar.gz ~/project/.circleci/ansible/roles/deploy/files/
+             mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
              cd .circleci/ansible
              echo "Contents  of the inventory.txt file is -------"
              cat inventory.txt
