--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -438,16 +438,35 @@ jobs:
             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --query "Reservations[*].Instances[*].PublicDnsName" \
             --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+            export API_URL="http://${BACKEND_IP}:3030"            
       - run:
           name: Backend smoke test.
           command: |
             # your code here
+            if [[ 'ok' =~ $(curl -s --connect-timeout 5 http://${BACKEND_IP}:3030/api/status | grep -o ok) ]];then return 0 else return 1;fi
+            # if curl "${API_URL}/api/status" | grep "ok"
+            # then
+            #     return 0
+            # else
+            #     return 1
+            # fi
       - run:
           name: Frontend smoke test.
           command: |
             # your code here
-      # Here's where you will add some code to rollback on failure  
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
+            if curl -s ${URL} | grep "Welcome"
+            then
+                # Change this to 0 after the job fails
+              return 1
+            else
+              return 1
+            fi
+      # Here's where you will add some code to rollback on failure
+      - remove-bucket-contents
+      - destroy-environment
 
 #   cloudfront-update:
 #     docker:
