--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -527,13 +527,16 @@ jobs:
         - run:
             name: Remove old stacks and files
             command: |
-              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}"  ]]
-              then
-                # your code here
-                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-                aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-              fi
+              for item in "${STACKS[@]}"
+              do
+                if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${item##8-}"  ]]
+                then
+                  # your code here
+                  aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                  aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+                  aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+                fi
+              done
             
 
 workflows:
