--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -527,17 +527,16 @@ jobs:
         - run:
             name: Remove old stacks and files
             command: |
-              for item in "${STACKS[@]}"
-              do
-                echo "${item##*-}"
-                if [[ ! ${item##*-} =~ ${CIRCLE_WORKFLOW_ID:0:7}  ]]
-                then
-                  # your code here
-                  aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-                  aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-                  aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-                fi
-              done
+              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
+              then
+                # your code here
+                echo "----------Deletes cofirmed------------"
+                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              else
+                echo "----------Cannot cleanup------------"
+              fi
             
 
 workflows:
