--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -527,7 +527,7 @@ jobs:
         - run:
             name: Remove old stacks and files
             command: |
-              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
+              if [[ "${OldWorkflowID}" =~ "${STACKS[@]}"  ]]
               then
                 # your code here
                 echo "----------Deletes cofirmed------------"
@@ -561,7 +561,7 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [master]
+              only: [feature-branch]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
