--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -519,7 +519,7 @@ jobs:
               #   list-exports --query "Exports[?Name==\`ID\`].Value" \
               #     --no-paginate --output text)
               export OldWorkflowID=($(aws cloudformation \ 
-                 describe-stacks --query "Stacks[].Outputs[?OutputKey==\'ID\'].OutputValue" \
+                 describe-stacks --query "Stacks[*].Outputs[?OutputKey==\`ID\`].OutputValue" \
                       --no-paginate --output text))
               echo OldWorkflowID: "${OldWorkflowID[@]}"
               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
