--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -514,14 +514,12 @@ jobs:
             name: Get old stack workflow id
             command: |
               # your code here
-              # Fetch the Old workflow ID
-              # export OldWorkflowID=$(aws cloudformation \
-              #   list-exports --query "Exports[?Name==\`ID\`].Value" \
-              #     --no-paginate --output text)
-              export OldWorkflowID=($(aws cloudformation \ 
-                 describe-stacks --query "Stacks[*].Outputs[?OutputKey==\`ID\`].OutputValue" \
-                      --no-paginate --output text))
-              echo OldWorkflowID: "${OldWorkflowID[@]}"
+              Fetch the Old workflow ID
+              export OldWorkflowID=$(aws cloudformation \
+                list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                  --no-paginate --output text)
+              # export OldWorkflowID=($(aws cloudformation describe-stacks --query "Stacks[*].Outputs[?OutputKey==\`ID\`].OutputValue" --no-paginate --output text))
+              echo OldWorkflowID: "${OldWorkflowID}"
               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
               export "${CIRCLE_WORKFLOW_ID:0:7}"
               # Fetch the stack names          
@@ -530,20 +528,17 @@ jobs:
               echo Stack names: "${STACKS[@]}"
         - run:
             name: Remove old stacks and files
-            command: |
-              for item in "${OldWorkflowID[@]}"
-              do
-                if [[ "${CIRCLECI_WORKFLOW_ID:0:7}" =~ "$item"]]
-                then
-                    # your code here
-                    echo "----------Cannot cleanup------------"
-                else
-                    echo "----------Deletes cofirmed------------"
-                    aws s3 rm "s3://udapeople-$item" --recursive
-                    aws cloudformation delete-stack --stack-name "udapeople-backend-$item"
-                    aws cloudformation delete-stack --stack-name "udapeople-frontend-$item"
-                fi
-              done
+            command: |              
+              if [[ ${CIRCLECI_WORKFLOW_ID:0:7} =~ ${OldWorkflowID} ]]
+              then
+                  # your code here
+                  echo "----------Cannot cleanup------------"
+              else
+                  echo "----------Deletes cofirmed------------"
+                  aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                  aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+                  aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              fi
 
 
 workflows:
