--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -513,13 +513,11 @@ jobs:
         - run:
             name: Get old stack workflow id
             command: |
-              # your code here
-              Fetch the Old workflow ID
+              # Fetch the Old workflow ID
               export OldWorkflowID=$(aws cloudformation \
                 list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                   --no-paginate --output text)
               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-              export "${CIRCLE_WORKFLOW_ID:0:7}"
               # Fetch the stack names
               export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
               --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
