--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -525,15 +525,15 @@ jobs:
         - run:
             name: Remove old stacks and files
             command: |       
-              if [[ ${CIRCLECI_WORKFLOW_ID:0:7} =~ ${OldWorkflowID} ]]
+              if [[ "${OldWorkflowID}" =~ "${STACKS[@]}"  ]]
               then
                   # your code here
-                  echo "----------Cannot cleanup------------"
-              else
                   echo "----------Deletes cofirmed------------"
                   aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
                   aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                   aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              else
+                   echo "----------Cannot cleanup------------"
               fi
 
 
