Updated the backend deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -525,7 +525,7 @@ jobs:
         - run:
             name: Remove old stacks and files
             command: |       
-              if [[ "${OldWorkflowID}" =~ "${STACKS[@]}"  ]]
+              if [[ "${STACKS[@]}" =~ "${OldWorkflowID}"  ]]
               then
                   # your code here
                   echo "----------Deletes cofirmed------------"
