--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -525,11 +525,11 @@ jobs:
         - run:
             name: Remove old stacks and files
             command: |       
-              if [[ "${STACKS[@]}" =~ "${OldWorkflowID}"  ]]
+              if [[ "${STACKS[@]}" =~ "${CIRCLE_WORKFLOW_ID:0:7}"  ]]
               then
                   # your code here
                   echo "----------Deletes cofirmed------------"
-                  aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                  aws s3 rm s3://udapeople-"${OldWorkflowID}" --recursive
                   aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                   aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
               else
