Updated the backend deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -514,9 +514,10 @@ jobs:
             name: Get old stack workflow id
             command: |
               # Fetch the Old workflow ID
-              export OldWorkflowID=$(aws cloudformation \
-                list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-                  --no-paginate --output text)
+              # export OldWorkflowID=$(aws cloudformation \
+              #   list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              #     --no-paginate --output text)
+              export OldWorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
               # Fetch the stack names
               export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
@@ -525,11 +526,11 @@ jobs:
         - run:
             name: Remove old stacks and files
             command: |       
-              if [[ "${STACKS[@]}" =~ "${CIRCLE_WORKFLOW_ID:0:7}"  ]]
+              if [[ "${STACKS[@]}" =~ "${OldWorkflowID}"  ]]
               then
                   # your code here
                   echo "----------Deletes cofirmed------------"
-                  aws s3 rm s3://udapeople-"${OldWorkflowID}" --recursive
+                  aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
                   aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                   aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
               else
