Updated the backend deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -526,7 +526,7 @@ jobs:
         - run:
             name: Remove old stacks and files
             command: |       
-              if [[ "${STACKS[@]}" =~ "${OldWorkflowID}"  ]]
+              if [[ ${STACKS[@]} =~ ${OldWorkflowID} ]]
               then
                   # your code here
                   echo "----------Deletes cofirmed------------"
