Updated the backend deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -511,7 +511,7 @@ jobs:
         # Checkout code from git
         - checkout
         - run:
-            name: Get old stack workflow id
+            name: Get old stack workflow id and then remove stacks
             command: |
               # Fetch the Old workflow ID
               # export OldWorkflowID=$(aws cloudformation \
@@ -522,10 +522,7 @@ jobs:
               # Fetch the stack names
               export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
               --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
-              echo Stack names: "${STACKS[@]}"
-        - run:
-            name: Remove old stacks and files
-            command: |       
+              echo Stack names: "${STACKS[@]}"              
               if [[ ${STACKS[@]} =~ ${OldWorkflowID} ]]
               then
                   # your code here
