--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -493,6 +493,7 @@ jobs:
             export OldWorkflowID=$(aws cloudformation list-exports \
             --query "Exports[?Name==\`WorkflowID\`].Value" \
             --no-paginate --output text)
+            echo "${OldWorkflowID}" >> ~/OldWorkflowID.txt
             aws cloudformation deploy \
             --template-file .circleci/files/cloudfront.yml \
             --stack-name InitialStack \
@@ -511,23 +512,31 @@ jobs:
         # Checkout code from git
         - checkout
         - run:
-            name: Get old stack workflow id and then remove stacks
+            name: Get old stack workflow id
             command: |
               # Fetch the Old workflow ID
-              # export OldWorkflowID=$(aws cloudformation \
-              #   list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-              #     --no-paginate --output text)
-              export OldWorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
+              export OldWorkflowID=$(aws cloudformation \
+                list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                  --no-paginate --output text)
+              echo $OldWorkflowID >> ~/OldWorkflowID.txt
+              cat ~/OldWorkflowID.txt
+              export OldWorkflowID=$(cat ~/OldWorkflowID.txt)
+              # export OldWorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
+              echo OldWorkflowID: "${OldWorkflowID}"
               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
               # Fetch the stack names
               export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
               --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
-              echo Stack names: "${STACKS[@]}"              
+              echo Stack names: "${STACKS[@]}"
+        - run:
+            name: Remove old stacks
+            command: |
               if [[ ${STACKS[@]} =~ ${OldWorkflowID} ]]
               then
                   # your code here
                   echo "----------Deletes cofirmed------------"
-                  aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                  echo $OldWorkflowID $STACKS ${CIRCLE_WORKFLOW_ID:0:7}
+                  # aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
                   aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                   aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
               else
