--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -531,12 +531,12 @@ jobs:
         - run:
             name: Remove old stacks
             command: |
-              if [[ ${STACKS[@]} =~ ${OldWorkflowID} ]]
+              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
               then
                   # your code here
                   echo "----------Deletes cofirmed------------"
                   echo $OldWorkflowID $STACKS ${CIRCLE_WORKFLOW_ID:0:7}
-                  # aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                  aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
                   aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                   aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
               else
@@ -579,7 +579,7 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]
+      # - cleanup:
+      #     requires: [cloudfront-update]
 
 # VS Code Extension Version: 1.5.0
