--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -542,7 +542,18 @@ jobs:
               #       echo "----------Cannot cleanup------------"
               #   fi
               # done
-
+              for i in "${STACKSID[@]}"
+              do
+                if [[ "${CIRCLE_WORKFLOW_ID}" != "$i" ]]
+                then
+                    echo "----------------Delete confirmed-----------"
+                    aws s3 rm "s3://bucket-$i" --recursive
+                    aws cloudformation delete-stack --stack-name "udapeople-frontend-$i"
+                    aws cloudformation delete-stack --stack-name "udapeople-backend-$i"
+                else
+                    echo  "----------------Cannot cleanup------------"
+                fi
+              done
 
 workflows:
   default:
