--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,6 +177,7 @@ jobs:
              cd frontend
              npm install
              npm audit fix --audit-level=critical --force
+             npm audit fix --force
              npm audit --audit-level=critical
       - slack/notify:
           branch_pattern: master
@@ -593,4 +594,4 @@ workflows:
       - cleanup:
           requires: [cloudfront-update]
 
-# VS Code Extension Version: 1.5.0
+# VS Code Extension Version: 1.5.1
