--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,6 +178,7 @@ jobs:
              npm install
              npm audit fix --audit-level=critical --force
              npm audit fix --force
+             npm update path-parse --depth 4
              npm audit --audit-level=critical
       - slack/notify:
           branch_pattern: master
