--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,6 +179,7 @@ jobs:
              npm audit fix --audit-level=critical --force
              npm audit fix --force
              npm update path-parse --depth 4
+             npm audit fix
              npm audit --audit-level=critical
       - slack/notify:
           branch_pattern: master
