--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -8,6 +8,19 @@
     become: yes
     apt: 
       upgrade: yes
+  - name: install deps
+    become: yes
+    apt:
+      name: ['nodejs', 'npm']
+      state: latest
+      update_cache: yes
+  - name: install pm2
+    become: yes
+    npm:
+      name: pm2
+      global: yes
+      state: latest
+      production: yes
 
   - name: Unarchive files
     become: yes
@@ -19,8 +32,8 @@
     become: yes
     shell: |
       npm install
-      pm2 stop default
+      pm2 stop all
       pm2 start npm -- start
 
 
-# VS Code Extension Version: 1.5.0
+# VS Code Extension Version: 1.5.1
