--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,38 +1,31 @@
 ---
-- name: 'update and upgrade packages.'
-  become: yes
-  apt:
-    upgrade: yes
-    update_cache: yes
-    cache_valid_time: 86400
-- name: remove unneeded deps
-  become: yes
-  apt:
-    autoremove: yes
-- name: install deps
-  become: yes
-  apt:
-    name: ['nodejs', 'npm']
-    state: latest
-    update_cache: yes
-- name: install pm2
-  become: yes
-  npm:
-    name: pm2
-    global: yes
-    state: latest
-    production: yes
-- name: extract artifact
-  become: yes
-  unarchive:
-    src: files/artifact.tar.gz
-    dest: .
+  - name: Update
+    become: yes
+    apt:
+      update_cache: yes
+      cache_valid_time: 86400
+  - name: remove unneeded deps
+    become: yes
+    apt:
+      autoremove: yes
 
-- name: start app
-  become: yes
-  shell: |
-    pm2 delete all
-    pm2 start npm -- start
+  - name: "upgrade packages"
+    become: yes
+    apt: 
+      upgrade: yes
+
+  - name: Unarchive files
+    become: yes
+    unarchive:
+      src: "files/artifact.tar.gz"
+      dest: .
+
+  - name: "Start application"
+    become: yes
+    shell: |
+      npm install
+      pm2 stop default
+      pm2 start npm -- start
 
 
 # VS Code Extension Version: 1.5.1
