--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -314,9 +314,9 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
-      - aws-cli/setup
-      - restore_cache:
-          keys: [scan-backend]      
+      # - aws-cli/setup
+      # - restore_cache:
+      #     keys: [scan-backend]      
       - run:
           name: Run migrations
           command: |
