--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -322,7 +322,7 @@ jobs:
           command: |
             cd backend
             # Run and save the migration output
-            # npm install --no-audit --no-fund
+            npm install --no-audit --no-fund
             npm run migrations > migrations_dump.txt
             # no_output_timeout: 5m
       - run:
