--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -508,7 +508,7 @@ jobs:
             aws cloudformation deploy \
             --template-file .circleci/files/cloudfront.yml \
             --stack-name InitialStack \
-            --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} Region=${region} \
+            --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} Region=<<parameters.region>> \
             --tags project=udapeople
       # Here's where you will add some code to rollback on failure
       - revert-migrations
