--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,11 +4,6 @@ orbs:
   aws-cli: circleci/aws-cli@3.1.4
   ansible_upload: orbss/ansible_upload@0.2.8
 
-parameters:
-  region:
-    type: string
-    default: us-east-1
-
 commands:
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
@@ -507,7 +502,7 @@ jobs:
             aws cloudformation deploy \
             --template-file .circleci/files/cloudfront.yml \
             --stack-name InitialStack \
-            --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} Region=<< pipeline.parameters.region >> \
+            --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} \
             --tags project=udapeople
       # Here's where you will add some code to rollback on failure
       - revert-migrations
