--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -509,6 +509,32 @@ jobs:
       - remove-bucket-contents
       - destroy-environment
 
+  prom  -node-exporter:
+    docker:
+      - image: python:3.10-alpine3.16
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["6c:f8:3d:35:4b:aa:19:6a:94:22:b8:52:e1:75:9d:23"]
+            
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update aws-cli tar gzip ansible nodejs npm
+      - restore_cache:
+          keys: [backend-build]
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Setup prometheus node exporter on backend
+          command: |
+            cd .circleci/ansible
+            cat inventory.txt
+            ansible-playbook -i inventory.txt node-exporter.yml 
+      # Here's where you will add some code to rollback on failure
+      - remove-bucket-contents
+      - destroy-environment  
+
   cleanup:
       docker:
         # Docker image here
@@ -594,6 +620,8 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
+      - prom-node-exporter:
+          requires: [smoke-test]  
       - cleanup:
           requires: [cloudfront-update]
 
